syntax = "proto3";
package secure.profiling;

// The fingerprint message is the main message for fingerprint
// reporting, from agent to collector.
message fingerprint {
    uint64 timestamp_ns = 1;
    string machine_id = 2;
    string customer_id = 3;
    repeated program_fingerprint progs = 4;
    repeated container_fingerprint container = 5;
}

message sub_category {
    string name = 1;
    repeated string d = 2;
    bool full = 3;
}

message sub_category_container {
    repeated sub_category subcats = 1;
}

message category {
    string name = 1;
    repeated sub_category_container startup_subcats = 2;
    repeated sub_category_container regular_subcats = 3;
}

message program_fingerprint {
    string comm = 1;
    string exe = 2;
    repeated string args = 3;
    uint64 user_id = 4;
    string container_id = 5;
    repeated category cats = 6;
}

message container_fingerprint {
    string id = 1;
    string name = 2;
    string image_name = 3;
    string image_id = 4;
}

